--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ section {
     margin: 15vh 35%;
     border-radius: 10px;
     padding: 10px;
+    box-shadow: 0px 0px 8px black;
 }
 
 h2 {
@@ -22,6 +23,7 @@ form label {
 form input[type="number"] {
     width: 100px;
     margin: 1vh 0;
+    padding: 5px;
 }
 
 form input[type="text"] {
@@ -29,9 +31,13 @@ form input[type="text"] {
     border-radius: 10px;
 }
 
+select {
+    padding: 5px;
+}
+
 form input[type="submit"] {
     /* width: 100px; */
-    padding: 5px 10px;
+    padding: 5px 25px;
     cursor: pointer;
     margin: 5px 0;
     border-radius: 20px;
